# stunning-memory

./: .gitignore  README.md  properties_example.json  pyproject.toml  requirements.txt  set_custom_properties.py  setup.py
src/stunning_memory/: __init__.py  core.py
tests/: __init__.py  test_core.py
